# hyprland_minimizer

./: Cargo.toml  LICENSE  README.md  config.example.toml
src/: config.rs  dbus.rs  hyprland.rs  launcher.rs  lock.rs  main.rs
